# lio_slam_navigation

./: CMakeLists.txt  LOCALIZATION_GUIDE.md  LOCALIZATION_USAGE.md  package.xml
config/: avia.yaml  localization_unilidar_l2.yaml  unilidar_l2.yaml  unilidar_l2_loc.yaml  velody16.yaml
launch/: gdb_debug_example.launch  mapping_avia.launch  mapping_horizon.launch  mapping_ouster64.launch  mapping_unilidar_l1.launch  mapping_unilidar_l2.launch  mapping_velody16.launch  octomap.launch
rviz_cfg/: amcl.rviz  loam_livox.rviz  localization.rviz
scripts/: check_pcd_scale.py  global_localization.py  loc.py  save_pose_on_keypress.py  test.py  transform_fusion.py
src/: 2dmap.cpp  grid_mapping.cpp  laserMapping.cpp  map_loop.cpp  map_loop.h  parameters.cpp  parameters.h
src/test/: CMakeLists.txt  loop_closure_test.cpp
